@@ -1,10 +1,11 @@
-CHANGES.txt - 2.0.3 - 2015-02-27
+CHANGES.txt - 2.0.3 - 2015-03-25
 --------------------------------
 
 CHANGES IN CUPS V2.0.3
 
 	- Restored missing generic printer icon file (STR #4587)
 	- Fixed logging of configuration errors to show up as errors (STR #4582)
+	- Fixed buffer overflow in rastertopwg (STR #4598)
 	- Added Russian translation (STR #4577)
 
 
